# white-rabbit

./: .gitignore  .gitmodules  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  README.md  best_network-2.npz  best_network.npz  dev.npz  dev.py  pyproject.toml  teeeeeest.npz  test.npz  white-rabbit.ipynb  whiterabbit.py  work.md
.github/workflows/: codeql.yml
data/: best-network.npz
data/archive/: best_network-1.npz  best_network-3.npz  best_network.npz  champion-2023.01.19.npz  random-champion.npz  refactoring-first-champion.npz
data/games/: game.pgn
data/test/: arr_13.npy  ctest.npz  test2.npz  test3.npz  test4.npz
data/training/: best-network.npz  statistics.json
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  pysportscanins.rst  usage.rst
tests/: test_network_save.npz  test_network_save.py  test_numpy.py
whiterabbit/: __init__.py  __main__.py  book.py  cli.py  types.py  uci.py
whiterabbit/engine/: __init__.py  evaluation.py
whiterabbit/nerual_network[merge]/training/: __init__.py
whiterabbit/nerual_network[merge]/utils/: equivalence.py  save.py
whiterabbit/neural_network/: __init__.py  config.py
whiterabbit/neural_network/training/: __init__.py  __main__.py  config.py  rich_cli.py  textual.py
whiterabbit/neural_network/utils/: hash.py  iter.py  random.py  repr.py  save.py
whiterabbit/trainer/: __init__.py  __main__.py  cli.py  config.py  constants.py  functions.py  lock.py  stats.py
whiterabbit/uci/: __init__.py  commands.py  engine.py  options.py
work/: benchmark.md  engine-interface.txt
