[tool.poetry]
name = "white-rabbit"
version = "0.1.4"
description = "The White Rabbit chess engine - A neural network engine."
authors = ["Virinas-code <alexcode228@gmail.com>"]
license = "GPL-3.0"
packages = [{include = "whiterabbit"}]

[tool.poetry.dependencies]
python = "^3.9"
python-chess = "^1.999"
numpy = "^1.23.1"
psutil = "^5.9.1"
chess = "^1.9.2"
PyYAML = "^6.0"
requests = "^2.28.1"
backoff = "^2.1.2"
rich = {extras = ["jupyter"], version = "^12.6.0"}
setuptools = "^65.4.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
esbonio = "^0.13.1"
black = "^22.6.0"
pylint = "^2.15.5"
mypy = "^0.971"
flake8 = "^4.0.1"
ipykernel = "^6.15.1"
pyinstrument = "^4.3.0"
py-spy = "^0.3.12"
jupyter = "^1.0.0"
notebook = "^6.5.2"
pytest-benchmark = "^3.4.1"
austin-tui = "^1.2.0"

[tool.poetry.scripts]
white-rabbit = 'whiterabbit.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
