[tool.poetry]
name = "white-rabbit"
version = "0.1.4"
description = "The White Rabbit chess engine - A neural network engine."
authors = ["Virinas-code <alexcode228@gmail.com>"]
license = "GPL-3.0"
packages = [{include = "whiterabbit"}]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
python-chess = "^1.999"
numpy = "^1.24.1"
psutil = "^5.9.4"
chess = "^1.9.2"
PyYAML = "^6.0"
requests = "^2.32.2"
rich = {extras = ["jupyter"], version = "^12.6.0"}
setuptools = "^65.4.1"
click = "^8.1.3"
backoff = "^2.2.1"
textual = "^0.6.0"
filelock = "^3.9.0"
matplotlib = "^3.6.3"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pylint = "^2.15.5"
mypy = "^0.991"
py-spy = "^0.3.14"
jupyter = "^1.0.0"
notebook = "^6.5.2"
pytest-benchmark = "^4.0.0"
austin-tui = "^1.2.0"
flake8 = "^5.0.4"
pyinstrument = "^4.4.0"
textual = {extras = ["dev"], version = "^0.6.0"}

[tool.poetry.scripts]
white-rabbit = 'whiterabbit.__main__:main'

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
py = "^1.11.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"

[mypy]
check_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
